k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
      - name: app
        image: melek4000/payments-api:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4000
