k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payments-svc
spec:
  type: NodePort
  selector:
    app: payments
  ports:
    - port: 4000
      targetPort: 4000
      nodePort: 30008
